# itch-feed-handler

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt
benchmarks/: CMakeLists.txt  bench_itch_parser.cpp  bench_level2_book.cpp  bench_order_map.cpp  bench_seqlock.cpp  bench_spsc_queue.cpp
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
config/: feed_handler.toml
include/app/: feed_handler.hpp
include/common/: compiler.hpp  constants.hpp  logging.hpp  timestamp.hpp  types.hpp
include/concurrency/: cacheline.hpp  seqlock.hpp  spsc_queue.hpp
include/monitoring/: latency_histogram.hpp  metrics_reporter.hpp
include/network/: packet.hpp  packet_ring.hpp  socket_receiver.hpp  udp_receiver.hpp
include/orderbook/: bbo_publisher.hpp  level2_book.hpp  order_book_pool.hpp  order_map.hpp  order_pool.hpp  price_level.hpp
include/protocol/: itch_messages.hpp  itch_parser.hpp  moldudp64.hpp  moldudp64_parser.hpp  sequence_tracker.hpp
include/recovery/: book_snapshot.hpp  gap_detector.hpp  persistent_sequence.hpp  retransmit_client.hpp
include/routing/: shard_router.hpp  symbol_directory.hpp
include/session/: session_manager.hpp
include/system/: cpu_affinity.hpp
include/workers/: feed_merger.hpp  parser_thread.hpp  receiver_thread.hpp  recovery_thread.hpp  shard_worker.hpp
src/app/: feed_handler.cpp  main.cpp
src/monitoring/: latency_histogram.cpp  metrics_reporter.cpp
src/network/: socket_receiver.cpp
src/orderbook/: bbo_publisher.cpp  level2_book.cpp  order_book_pool.cpp  order_map.cpp  order_pool.cpp  price_level.cpp
src/protocol/: itch_parser.cpp  moldudp64_parser.cpp  sequence_tracker.cpp
src/recovery/: book_snapshot.cpp  gap_detector.cpp  persistent_sequence.cpp  retransmit_client.cpp
src/routing/: shard_router.cpp  symbol_directory.cpp
src/session/: session_manager.cpp
src/system/: cpu_affinity.cpp
src/workers/: feed_merger.cpp  parser_thread.cpp  receiver_thread.cpp  recovery_thread.cpp  shard_worker.cpp
tests/: CMakeLists.txt  test_bbo_publisher.cpp  test_itch_parser.cpp  test_latency_histogram.cpp  test_level2_book.cpp  test_order_map.cpp  test_order_pool.cpp  test_seqlock.cpp  test_sequence_tracker.cpp  test_shard_router.cpp  test_spsc_queue.cpp
tools/: CMakeLists.txt  itch_inspect.cpp  pcap_replay.cpp
